# FLAML

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  Dockerfile  HowToMergeGithub.md  HowToTestFLAML4Fabric.md  NOTICE.md  README.md  SECURITY.md  auto_create_timestamps_pr.md  azurepipelines-coverage.yml  cnn_daily.txt  codecov.yml  coverage_3.10_windows-latest.xml  coverage_3.11_macos-latest.xml  coverage_3.11_ubuntu-latest.xml  coverage_3.11_windows-latest.xml  gene_script.py  genindex.html  hpo_ray_tune.md  index.html  installed_all_dependencies_3.10_ubuntu-latest.txt  installed_all_dependencies_3.10_windows-latest.txt  installed_all_dependencies_3.11_macos-latest.txt  installed_all_dependencies_3.11_ubuntu-latest.txt  installed_all_dependencies_3.11_windows-latest.txt  installed_all_dependencies_3.12_ubuntu-latest.txt  installed_all_dependencies_3.12_windows-latest.txt  installed_all_dependencies_3.13_ubuntu-latest.txt  installed_all_dependencies_3.13_windows-latest.txt  installed_first_tier_dependencies_3.10_ubuntu-latest.txt  installed_first_tier_dependencies_3.10_windows-latest.txt  installed_first_tier_dependencies_3.11_macos-latest.txt  installed_first_tier_dependencies_3.11_ubuntu-latest.txt  installed_first_tier_dependencies_3.11_windows-latest.txt  installed_first_tier_dependencies_3.12_ubuntu-latest.txt  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  general_issue.yml
.github/workflows/: CD.yml  deploy-website.yml  openai.yml  pre-commit.yml  python-app.yml  python-package.yml
.pipelines/: .condarc  FLAML-Internal-Official.yml  FLAML-Internal-PublishPip.yml  FLAML-Internal-PullRequest.yml  build.yml  install_python.yml
.pipelines/requirements/: Python311-CPU.yml  Python313-CPU.yml  anaconda-spark35-py311.yml  anaconda-spark40-py312.yml  requirement_310.yml  requirement_311.yml
_modules/: index.html
_modules/flaml/: automl.html
assets/css/: styles.b5f81c4f.css  styles.c6168781.css  styles.d234052d.css  styles.e3964f93.css
assets/js/: 0035e736.0823a540.js  0035e736.1ff1fc2e.js  0035e736.3050cfe1.js  0035e736.326049fe.js  0035e736.360586c1.js  0035e736.385b6bdb.js  0035e736.4251cd7e.js  0035e736.48a75d64.js  0035e736.50531e2d.js  0035e736.6e362a40.js  0035e736.6e862ad6.js  0035e736.75c8d206.js  0035e736.7aa5f200.js  0035e736.8a3c465d.js  0035e736.92ec6a48.js  0035e736.9721eeda.js  0035e736.b9420ce1.js  0035e736.c3cae219.js  0035e736.ca8a6f18.js  0035e736.fadedcaa.js  0044aaf7.094a6eaf.js  0044aaf7.4bb14d54.js  0044aaf7.57ef33ae.js  0044aaf7.7a18c533.js  0044aaf7.8ad7048f.js  0044aaf7.bf4e88e5.js  0044aaf7.d93110a3.js  0044aaf7.f4b18da2.js  0044aaf7.f69c673e.js  00de6485.ac025a0d.js  00de6485.ad6b1814.js  01a85c17.847cd775.js  01a85c17.ea5ddc13.js  (+1621 more)
benchmarkeval/: amlk8s_hyperpartisan.yml
blog/: atom.xml  index.html  rss.xml
checkpoints/: epoch=0-step=64.ckpt  epoch=0-step=72.ckpt
conda-build/: HowToUpdateVersion.md  download_files.sh  versions_in_blob.txt
docs/: Makefile  index.rst
examples/: multi_target_regression_demo.py
flaml/: __init__.py  automl.py  config.py  data.py  helper_functions.py  ml.py  model.py  model_compute_helper.py  model_config.py  model_helper.py  search.py  space.py  training_log.py  ts_model.py  util.py  utils.py  version.py
lowcode/: task-model-metrics-mapping.json
mathsolving/: funccall_python.py  funccall_wolfram.py  main.py  mathchat.py  pseudo_main.py  run.sh  utils.py
notebook/: README.md  autogen_agent.ipynb  autogen_agent_MathChat.ipynb  autogen_agent_auto_feedback_from_code_execution.ipynb  autogen_agent_continual_summarization.ipynb  autogen_agent_function_call.ipynb  autogen_agent_human_feedback.ipynb  autogen_agent_paper_talk.ipynb  autogen_agent_planning.ipynb  autogen_agent_two_users.ipynb  autogen_agent_user_feedback.ipynb  autogen_agent_web_info.ipynb  autogen_agentchat_MathChat.ipynb  autogen_agentchat_RetrieveChat.ipynb  autogen_agentchat_auto_feedback_from_code_execution.ipynb  autogen_agentchat_chess.ipynb  autogen_agentchat_compress_history.ipynb  autogen_agentchat_function_call.ipynb  autogen_agentchat_groupchat.ipynb  autogen_agentchat_groupchat_vis.ipynb  autogen_agentchat_human_feedback.ipynb  autogen_agentchat_med.ipynb  autogen_agentchat_med_43.ipynb  autogen_agentchat_med_plan.ipynb  autogen_agentchat_med_plan_2.ipynb  autogen_agentchat_optiguide.ipynb  autogen_agentchat_planning.ipynb  autogen_agentchat_stream.ipynb  autogen_agentchat_two_users.ipynb  autogen_agentchat_web_info.ipynb  autogen_chatgpt.ipynb  autogen_chatgpt_gpt4.ipynb  autogen_func_call_test.ipynb  autogen_function_call.ipynb  autogen_multiagent_roleplay_chat.ipynb  autogen_openai.ipynb  autogen_openai_completion.ipynb  autogen_optiguide.ipynb  autogent_agent_MathChat.ipynb  automl_classification.ipynb  (+39 more)
search/: index.html
test/: amlk8s.yml  check_dependency.py  conftest.py  default_lgbm.py  default_xgb.py  get_best.py  housing.json  load_args.py  multireg.py  object_store.py  rank.py  reg.py  rep.py  run_distribute_automl.py  run_distribute_tune.py  run_electra.py  run_flaml.py  run_gpu.py  test_agtextpredictor.py  test_autohf.py  test_autohf_cv.py  test_autohf_regression.py  test_autohf_switchhead.py  test_automl.py  test_automl_exp.py  test_autovw.py  test_classification.py  test_conda_distribution.py  test_distillbert.py  test_dt_parallel.py  test_electra.py  test_ensemble.py  test_forecast.py  test_gpu.py  test_misc_coverage.py  test_model.py  test_multiclass.py  test_notebook_example.py  test_numpy_compatibility.py  test_python_log.py  (+11 more)
tutorial/: README.md
tutorials/: Automl2024DemoAutoMLTask.ipynb  Automl2024DemoTuneLLM.ipynb  README.md  flaml-tutorial-aaai-23.md  flaml-tutorial-automl-24.md  flaml-tutorial-kdd-22.md  flaml-tutorial-pydata-23.md
website/: README.md  docusaurus.config.js  package-lock.json  package.json  pydoc-markdown.yml  sidebars.js  versions.json
with_filetag/: amlk8s_acl_rs.yml
wo_filetag/: amlk8s_acl_rs.yml
(+958 files in other folders)
