[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FLAML"
dynamic = ["version"]
description = "A fast library for automated machine learning and tuning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Microsoft Corporation", email = "hpo@microsoft.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "NumPy>=1.17",
]

[project.urls]
Homepage = "https://github.com/microsoft/FLAML"

[project.optional-dependencies]
automl = [
    "lightgbm>=2.3.1",
    "xgboost>=0.90,<3.0.0",
    "scipy>=1.4.1",
    "pandas>=1.1.4",
    "scikit-learn>=1.0.0",
]
notebook = [
    "jupyter",
]
spark = [
    "pyspark>=3.2.0",
    "pandas<3",
    "joblibspark>=0.5.0",
    "joblib<=1.3.2",
]
test = [
    "numpy>=1.17,<2.0.0; python_version<'3.13'",
    "numpy>=1.17; python_version>='3.13'",
    "jupyter",
    "lightgbm>=2.3.1",
    "xgboost>=0.90,<2.0.0; python_version<'3.11'",
    "xgboost>=2.0.0; python_version>='3.11'",
    "scipy>=1.4.1",
    "pandas>=1.1.4",
    "scikit-learn>=1.2.0",
    "thop",
    "pytest>=6.1.1",
    "pytest-rerunfailures>=13.0",
    "coverage>=5.3",
    "pre-commit",
    "torch",
    "torchvision",
    "catboost>=0.26",
    "rgf-python",
    "optuna>=2.8.0,<=3.6.1",
    "openml",
    "statsmodels>=0.12.2",
    "psutil",
    "transformers[torch]",
    "datasets",
    "evaluate",
    "nltk!=3.8.2",
    "rouge_score",
    "hcrystalball",
    "seqeval",
    "pytorch-forecasting",
    "mlflow-skinny<=2.22.1",
    "joblibspark>=0.5.0",
    "joblib<=1.3.2",
    "nbconvert",
    "nbformat",
    "ipykernel",
    "pytorch-lightning",
    "tensorboardX",
    "requests",
    "packaging",
    "dill",
]
catboost = [
    "catboost>=0.26",
]
blendsearch = [
    "optuna>=2.8.0,<=3.6.1",
    "packaging",
]
ray = [
    "ray[tune]>=1.13,<2.5.0",
]
azureml = [
    "azureml-mlflow",
]
nni = [
    "nni",
]
vw = [
    "vowpalwabbit>=8.10.0, <9.0.0",
    "scikit-learn",
]
hf = [
    "transformers[torch]>=4.26",
    "datasets",
    "nltk<=3.8.1",
    "rouge_score",
    "seqeval",
]
nlp = [
    "transformers[torch]>=4.26",
    "datasets",
    "nltk<=3.8.1",
    "rouge_score",
    "seqeval",
]
ts_forecast = [
    "holidays",
    "prophet>=1.1.5",
    "statsmodels>=0.12.2",
    "hcrystalball>=0.1.10",
]
forecast = [
    "holidays",
    "prophet>=1.1.5",
    "statsmodels>=0.12.2",
    "hcrystalball>=0.1.10",
    "pytorch-forecasting>=0.10.4",
    "pytorch-lightning>=1.9.0",
    "tensorboardX>=2.6",
]
benchmark = [
    "catboost>=0.26",
    "psutil==5.8.0",
    "xgboost==1.3.3",
    "pandas==1.1.4",
]
synapse = [
    "joblibspark>=0.5.0",
    "optuna>=2.8.0,<=3.6.1",
    "pyspark>=3.2.0",
]
autozero = [
    "scikit-learn",
    "pandas",
    "packaging",
]

[tool.setuptools.dynamic]
version = {attr = "flaml.version.__version__"}

[tool.setuptools.packages.find]
include = ["flaml*"]

[tool.setuptools.package-data]
"flaml.default" = ["*/*.json"]
flaml = ["py.typed"]

[tool.pytest.ini_options]
addopts = '-m "not conda"'
markers = [
    "conda: test related to conda forge distribution"
]

[tool.black]
# https://github.com/psf/black
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.venv|_build|buck-out|build|dist)"


[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
#    "D",  # see: https://pypi.org/project/pydocstyle
#    "N",  # see: https://pypi.org/project/pep8-naming
#    "S",  # see: https://pypi.org/project/flake8-bandit
    "I",  # see: https://pypi.org/project/isort/
]
ignore = [
    "E501",
    "F401",
    "F403",
    "C901",
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs"
]
ignore-init-module-imports = true
unfixable = ["F401"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
