[metadata]
url = https://github.com/microsoft/FLAML
maintainer = Microsoft Corporation
maintainer_email = hpo@microsoft.com
name = FLAML
version = attr: flaml.version.__version__
description = A fast library for automated machine learning and tuning
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.7
install_requires =
    numpy >= 1.17.0rc1
    lightgbm >= 2.3.1
    xgboost >= 0.90
    scipy >= 1.4.1
    pandas >= 1.1.4
    scikit-learn >= 0.24
packages = find:
include_package_data = True

[options.package_data]
flaml.default =
    */*.json

[options.extras_require]
notebook =
    openml == 0.10.2
    jupyter
    matplotlib
    rgf-python
    catboost >= 0.26
test =
    flake8 >= 3.8.4
    pytest >= 6.1.1
    coverage >= 5.3
    pre-commit
    catboost >= 0.26
    rgf-python
    optuna == 2.8.0
    vowpalwabbit
    openml
    statsmodels >= 0.12.2
    psutil == 5.8.0
    dataclasses
    transformers >= 4.14
    datasets
    torch
    nltk
    rouge_score
    hcrystalball == 0.1.10
    seqeval
    protobuf < 4 # to prevent TypeError in ray
catboost =
    catboost >= 0.26
blendsearch =
    optuna == 2.8.0
ray =
    ray[tune] ~= 1.10
    protobuf < 4 # to prevent TypeError in ray
azureml =
    azureml-mlflow
nni =
    nni
vw =
    vowpalwabbit
nlp =
    transformers >= 4.14
    datasets
    torch
    seqeval
    nltk
    rouge_score
ts_forecast =
    holidays < 0.14 # to prevent installation error for prophet
    prophet >= 1.0.1
    statsmodels >= 0.12.2
    hcrystalball == 0.1.10
forecast =
    holidays < 0.14 # to prevent installation error for prophet
    prophet >= 1.0.1
    statsmodels >= 0.12.2
    hcrystalball == 0.1.10
benchmark =
    catboost >= 0.26
    psutil == 5.8.0
    xgboost == 1.3.3